--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@300;400;700&family=Inter:wght@400;500;600&display=swap');
 
